syntax = "proto3";

package engagement.v1;

option go_package = "github.com/bionicotaku/lingo-services-catalog/internal/tasks/engagement;engagement";

import "google/protobuf/timestamp.proto";

message EventProto {
  string event_name = 1;
  string user_id = 2;
  string video_id = 3;
  string engagement_type = 4;
  string state = 5;
  google.protobuf.Timestamp occurred_at = 6;
  string version = 7;
  string source = 8;
}
